--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node --require ts-node/register app.ts",
-    "dev": "TS_NODE_FILES=true TS_NODE_TRANSPILE_ONLY=true nodemon app.ts"
+    "start-ts": "node --require ts-node/register app.ts",
+    "dev": "TS_NODE_FILES=true TS_NODE_TRANSPILE_ONLY=true nodemon app.ts",
+    "start": "node app.js",
+    "build": "tsc -p ."
   },
   "keywords": [],
   "author": "",
